@@ -1,3 +1,10 @@
+SnowBlind (11/Feb/02)
+---------------------
+Additions:
+	+ Added Sticky mob list option in misc prefs tab
+	  (this option tries to keep the selected mob
+	  visible)
+
 Druppy (11/Feb/02)
 ------------------
 Additions:
